WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43141
Minor compile errors in loadMediaPlayerProxyPlugin
https://bugs.webkit.org/show_bug.cgi?id=43141
Summary
Minor compile errors in loadMediaPlayerProxyPlugin
Bryan Gislason
Reported
2010-07-28 13:15:45 PDT
Created
attachment 62870
[details]
3 small fixes These were not caught in initial compile because PLUGIN_PROXY_PROXY_FOR_VIDEO was not enabled.
Attachments
3 small fixes
(1.85 KB, patch)
2010-07-28 13:15 PDT
,
Bryan Gislason
japhet
: review-
Details
Formatted Diff
Diff
add a changelog
(1.87 KB, patch)
2010-07-28 15:17 PDT
,
Bryan Gislason
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2010-07-28 13:27:37 PDT
Comment on
attachment 62870
[details]
3 small fixes Code looks fine, but you need a ChangeLog. WebKitTools/Scripts/prepare-changelog will give you a stub in WebCore/ChangeLog that you can fill out.
Bryan Gislason
Comment 2
2010-07-28 15:17:01 PDT
Created
attachment 62884
[details]
add a changelog
Nate Chapin
Comment 3
2010-07-28 15:23:12 PDT
Comment on
attachment 62884
[details]
add a changelog Thanks!
WebKit Commit Bot
Comment 4
2010-07-28 20:25:03 PDT
Comment on
attachment 62884
[details]
add a changelog Clearing flags on attachment: 62884 Committed
r64262
: <
http://trac.webkit.org/changeset/64262
>
WebKit Commit Bot
Comment 5
2010-07-28 20:25:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug