2010-07-28  Bryan Gislason  <bgislason@rim.com>

Reviewed by Nate Chapin.

        Minor compile errors in loadMediaPlayerProxyPlugin
        https://bugs.webkit.org/show_bug.cgi?id=43141

        * WebCore/loader/SubframeLoader.cpp:

Canonical link: https://commits.webkit.org/55085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64262 268f45cc-cd09-0410-ab3c-d52691b4dbfc